--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,14 +1,6 @@
 .popup__input {
-    width: 100%;
-    border: 0;
-    border-bottom: 1px solid rgba(0, 0, 0, .2);
-    padding-bottom: 13px;
-}
-
-.popup__input:focus {
+    border: none;
     outline: none;
-}
-
-.popup__input::placeholder {
-    color: #000;
+    border-bottom: 1px solid #545454;
+    margin-bottom: 30px;
 }
