--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,9 +1,8 @@
 .popup__title {
-  font-weight: 900;
   font-size: 24px;
+  font-weight: 900;
   line-height: 29px;
-  color: #000;
-  align-self: flex-start;
-  margin: 0;
-  margin-bottom: 54px;
+  margin: 34px 0 54px;
+  padding: 0;
+  color: black;
 }
