--- a/blocks/popup/__wrapper/popup__wrapper.css
+++ b/blocks/popup/__wrapper/popup__wrapper.css
@@ -1,4 +1,4 @@
-.popup__container {
+.popup__wrapper {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -8,10 +8,5 @@
   border-radius: 10px;
   width: 100%;
   padding: 0 36px;
-}
-
-@media screen and (max-width: 767px) {
-  .popup__container {
-    max-width: 282px;
-  }
+  transition: 0.5s all;
 }
