--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,10 +1,11 @@
 .popup {
-  width: 100%;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, .15);
   position: fixed;
-  z-index: 2;
-  display: none;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  visibility: hidden;
+  transition: visibility 0.5s, opacity 0.5s;
 }
