--- a/blocks/popup/__form/__form_submit/popup__form-submit.css
+++ b/blocks/popup/__form/__form_submit/popup__form-submit.css
@@ -1,4 +1,4 @@
-.popup__form_submit {
+.popup__form-submit {
     background-color: #000;
     border: 1px solid #000;
     border-radius: 2px;
@@ -12,7 +12,7 @@
     justify-content: center;
 }
 
-.popup__form_submit:hover {
+.popup__form-submit:hover {
     cursor: pointer;
     opacity: 0.6;
 }
