fix: исправлены замечания ревьера

--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -4,4 +4,7 @@
     white-space: nowrap;
     overflow: hidden;
     color: black;
+    font-size: 24px;
+    line-height: 29px;
+    font-weight: 900;
 }
