--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -3,7 +3,13 @@
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
-    line-height: 1.22;
+    line-height: 22px;
     color: #545454;
+}
 
+@media screen and (max-width: 767px) {
+    .footer__copyright {
+        line-height: 17px;
+        font-size: 14px;
+    }
 }
