--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,3 +3,10 @@
     max-width: 880px;
     margin: 0 auto;
 }
+
+@media screen and (max-width: 767px) {
+    .footer {
+        width: 282px;
+        padding: 48px 0 36px;
+    }
+}
