--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,13 +1,14 @@
 .header {
     max-width: 880px;
-    height: 74px;
     margin: 0 auto;
     padding-top: 45px;
-    border-bottom: 1px solid #545454;
+    border-bottom: 1px solid rgba(54, 54, 54, .7);
 }
 
 @media screen and (max-width: 767px) {
     .header {
-        max-width: 288px;
+        max-width: 320px;
+        padding-bottom: 25px;
+        padding-top: 25px;
     }
 }
