--- a/blocks/popup/__wrapper/popup__wrapper.css
+++ b/blocks/popup/__wrapper/popup__wrapper.css
@@ -10,3 +10,9 @@
   padding: 0 36px;
   transition: 0.5s all;
 }
+
+@media screen and (max-width: 767px) {
+  .popup__wrapper {
+    max-width: 282px;
+  }
+}
