--- a/blocks/profile/__about/profile__about.css
+++ b/blocks/profile/__about/profile__about.css
@@ -10,9 +10,9 @@
 @media screen and (max-width: 767px) {
     .profile__about {
         max-width: 282px;
-        font-weight: 400;
         font-size: 14px;
         line-height: 17px;
         text-align: center;
+        margin: auto;
     }
 }
