--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,6 +1,6 @@
 .profile__add-button {
-    background-color: #000000;
-    background-image: url(/image/Vector1.png);
+    background-color: transparent;
+    background-image: url(/image/add.svg);
     background-repeat: no-repeat;
     background-position: 50%;
     border: 2px solid #fff;
@@ -17,8 +17,8 @@
 
 @media screen and (max-width: 767px) {
     .profile__add-button {
+        background-image: url(/image/VectorMobilePlus.svg);
         width: 282px;
-        height: 50px;
         box-sizing: border-box;
         margin-top: 35px;
     }
