--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -3,3 +3,9 @@
     border-radius: 50%;
     margin-right: 30px;
 }
+
+@media screen and (max-width: 767px) {
+    .profile__avatar {
+        margin: auto;
+    }
+}
