--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,6 +1,6 @@
 .profile__edit-button {
-    background-color: #000000;
-    background-image: url(/image/Vector.png);
+    background-color: transparent;
+    background-image: url(/image/edit.svg);
     min-height: 24px;
     min-width: 24px;
     background-repeat: no-repeat;
@@ -10,9 +10,20 @@
     margin-left: 17px;
     margin-top: 15px;
     margin-bottom: 18px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .profile__edit-button:hover {
     opacity: 0.6;
     cursor: pointer;
+}
+
+@media screen and (max-width: 767px) {
+    .profile__edit-button {
+        background-image: url(/image/VectorMobile.svg);
+        min-height: 18px;
+        min-width: 18px;
+    }
 }
