--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -7,9 +7,9 @@
 
 @font-face {
     font-family: 'Inter';
-    font-weight: 700;
-    src: url("Inter-Bold.woff2?v=3.19") format("woff2"),
-        url("Inter-Bold.woff?v=3.19") format("woff");
+    font-weight: 500;
+    src: url("Inter-Medium.woff2?v=3.19") format("woff2"),
+        url("Inter-Medium.woff?v=3.19") format("woff");
 }
 
 @font-face {
