--- a/blocks/element/__button/element__button.css
+++ b/blocks/element/__button/element__button.css
@@ -1,6 +1,6 @@
 .element__button {
     background-color: transparent;
-    background-image: url(/image/Vector.svg);
+    background-image: url(../../../image/Vector.svg);
     background-repeat: no-repeat;
     background-position: 50%;
     min-height: 19px;
