--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,6 +1,6 @@
 .popup__close {
   background-color: transparent;
-  background-image: url(/image/CloseIcon.svg);
+  background-image: url(../../../image/CloseIcon.svg);
   background-repeat: no-repeat;
   background-position: 50%;
   min-width: 32px;
@@ -19,6 +19,6 @@
 
 @media screen and (max-width: 767px) {
   .popup__close {
-    background-image: url(/image/CloseIconMobile.svg);
+    background-image: url(../../../image/CloseIconMobile.svg);
   }
 }
