--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,6 +1,6 @@
 .profile__edit-button {
     background-color: transparent;
-    background-image: url(/image/edit.svg);
+    background: url(../../../image/edit.svg);
     min-height: 24px;
     min-width: 24px;
     background-repeat: no-repeat;
@@ -22,7 +22,7 @@
 
 @media screen and (max-width: 767px) {
     .profile__edit-button {
-        background-image: url(/image/VectorMobile.svg);
+        background-image: url(../../../image/VectorMobile.svg);
         min-height: 18px;
         min-width: 18px;
     }
