--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,7 +1,7 @@
 .popup__input {
     border: none;
     outline: none;
-    border-bottom: 1px solid #545454;
+    border-bottom: 1px solid rgba(0,0,0,.2);
     margin-bottom: 30px;
 }
 
