--- a/blocks/profile/__about/profile__about.css
+++ b/blocks/profile/__about/profile__about.css
@@ -5,6 +5,10 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+
 }
 
 @media screen and (max-width: 767px) {
@@ -14,5 +18,6 @@
         line-height: 17px;
         text-align: center;
         margin: auto;
+        margin-top: 5px;
     }
 }
