--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,14 +2,14 @@
     max-width: 880px;
     margin: 0 auto;
     padding-top: 45px;
-    border-bottom: 1px solid rgba(84, 84, 84, 1);
-    height: 75px;
+    padding-bottom: 40px;
+    border-bottom: 1px solid rgba(54, 54, 54, .7);
 }
 
 @media screen and (max-width: 767px) {
     .header {
         max-width: 320px;
+        padding-bottom: 25px;
         padding-top: 25px;
-        height: 56px;
     }
 }
