--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -8,4 +8,8 @@
     -ms-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
     text-rendering: optimizeLegibility;
+    margin: 0 auto;
+    max-width: 1280px;
+    min-width: 320px;
+    width: 100%;
 }
