--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -14,11 +14,13 @@
 
 .popup__close:hover {
   cursor: pointer;
-  opacity: .8;
+  opacity: .6;
 }
 
 @media screen and (max-width: 767px) {
   .popup__close {
+    right: 0;
+    top: -35px;
     background-image: url(../../../image/CloseIconMobile.svg);
   }
 }
