--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,13 +1,8 @@
 .popup__input {
-    border: none;
-    outline: none;
-    border-bottom: 1px solid rgba(0,0,0,.2);
-    margin-bottom: 30px;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid rgba(0, 0, 0, .2);
+  margin-bottom: 30px;
+  font-size: 14px;
+  line-height: 17px;
 }
-
-@media screen and (max-width: 767px) {
-    .popup__input {
-      font-size: 14px;
-      line-height: 17px;
-    }
-  }
