--- a/blocks/popup/__wrapper/popup__wrapper.css
+++ b/blocks/popup/__wrapper/popup__wrapper.css
@@ -1,17 +1,19 @@
 .popup__wrapper {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: #fff;
-  max-width: 430px;
+  background-color: #fff;
   border-radius: 10px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 430px;
   padding: 0 36px;
-  transition: 0.5s all;
+  position: relative;
+  width: 100%;
 }
 
 @media screen and (max-width: 767px) {
   .popup__wrapper {
     max-width: 282px;
+    padding: 0 22px;
   }
 }
