--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,7 +1,10 @@
 .profile__avatar {
-    width: 120px;
-    border-radius: 50%;
-    margin-right: 30px;
+    height: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
+    -o-object-position: center;
+    object-position: center;
+    width: 100%;
 }
 
 @media screen and (max-width: 767px) {
