--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -2,5 +2,11 @@
     width: 336px;
     display: flex;
     flex-wrap: wrap;
+    margin-left: 30px;
 }
 
+@media screen and (max-width: 767px) {
+    .profile__info {
+        margin: 0;
+    }
+}
