--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,4 @@
-@import url("../vendor/normalize.css");
+@import url("/vendor/normalize.css");
 @import url("../fonts/fonts.css");
 @import url("../blocks/element/__button/element__button.css");
 @import url("../blocks/content/content.css");
