--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,6 @@
 @import url(../vendor/normalize.css);
 @import url("../fonts/fonts.css");
-@import url("../blocks/element/__button/element__button.css");
+@import url(../blocks/element/__button/element__button.css);
 @import url("../blocks/content/content.css");
 @import url("../blocks/element/__img/element__img.css");
 @import url("../blocks/element/__info/element__info.css");
