Fix: Исправление ошибок

--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -6,6 +6,6 @@
 @media screen and (max-width: 767px) {
     .profile__title {
         max-width: 282px;
-        margin-left: 75px;
+        margin: auto;
     }
 }
