--- a/pages/index.css
+++ b/pages/index.css
@@ -6,6 +6,7 @@
 @import url("../blocks/element/__info/element__info.css");
 @import url("../blocks/element/__title/element__title.css");
 @import url("../blocks/element/element.css");
+@import url("../blocks/element/__delete/element__delete.css");
 @import url("../blocks/elements/elements.css");
 @import url("../blocks/footer/__copyright/footer__copyright.css");
 @import url("../blocks/footer/footer.css");
@@ -29,3 +30,4 @@
 @import url("../blocks/profile/__title/profile__title.css");
 @import url("../blocks/profile/__username/profile__usermane.css");
 @import url("../blocks/profile/profile.css");
+@import url("../blocks/popup-add.css");
