--- a/pages/index.css
+++ b/pages/index.css
@@ -31,3 +31,4 @@
 @import url("../blocks/profile/__username/profile__usermane.css");
 @import url("../blocks/profile/profile.css");
 @import url("../blocks/popup-add.css");
+@import url("../blocks/popup-image.css");
