--- a/pages/index.css
+++ b/pages/index.css
@@ -7,6 +7,7 @@
 @import url("../blocks/element/__title/element__title.css");
 @import url("../blocks/element/element.css");
 @import url("../blocks/element/__delete/element__delete.css");
+@import url("../blocks/element/__button/_active/element__button_active.css");
 @import url("../blocks/elements/elements.css");
 @import url("../blocks/footer/__copyright/footer__copyright.css");
 @import url("../blocks/footer/footer.css");
