--- a/pages/index.css
+++ b/pages/index.css
@@ -37,3 +37,6 @@
 @import url("../blocks/popup/__wrapper/popup__wrapper.css");
 @import url("../blocks/popup/_image/popup_image.css");
 @import url("../blocks/popup/_opened/popup_opened.css");
+@import url("../blocks/popup/_error/popup__form_error.css");
+@import url("../blocks/popup/__form-submit/_inactive/popup__submit-button_inactive.css");
+@import url("../blocks/popup/__input/_error/popup__input-error.css");
