--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,8 +1,7 @@
 .popup__input {
   border: none;
   outline: none;
-  border-bottom: 1px solid rgba(0, 0, 0, .2);
-  margin-bottom: 30px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   font-size: 14px;
   line-height: 17px;
   height: 27px;
