feat: add Api, popup_avatar, popup_confirm

--- a/src/blocks/profile/__avatar-page/profile__avatar-page.css
+++ b/src/blocks/profile/__avatar-page/profile__avatar-page.css
@@ -1,7 +1,7 @@
 .profile__avatar-page {
-    border-radius: 50%;
-    height: 120px;
-    overflow: hidden;
-    position: relative;
     width: 120px;
-}
+    height: 120px;
+    border-radius: 50%;
+    margin: 0;
+    position: relative;
+  }
