--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,11 +1,11 @@
 .profile__avatar {
-    height: 100%;
-    -o-object-fit: cover;
+    margin: 0;
+    padding: 0;
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
     object-fit: cover;
-    -o-object-position: center;
-    object-position: center;
-    width: 100%;
-}
+  }
 
 @media screen and (max-width: 767px) {
     .profile__avatar {
