--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -8,6 +8,8 @@
 @import url("../blocks/element/element.css");
 @import url("../blocks/element/__delete/element__delete.css");
 @import url("../blocks/element/__button/_active/element__button_active.css");
+@import url("../blocks/element/__button-amount/element__button-amount.css");
+@import url("../blocks/element/__button-container/element__button-container.css");
 @import url("../blocks/elements/elements.css");
 @import url("../blocks/footer/__copyright/footer__copyright.css");
 @import url("../blocks/footer/footer.css");
@@ -19,6 +21,7 @@
 @import url("../blocks/profile/__avatar/profile__avatar.css");
 @import url("../blocks/profile/__avatar-page/profile__avatar-page.css");
 @import url("../blocks/profile/__edit-button/profile__edit-button.css");
+@import url("../blocks/profile/__avatar-edit-button/profile__avatar-edit-button.css");
 @import url("../blocks/profile/__info/profile__info.css");
 @import url("../blocks/profile/__title/profile__title.css");
 @import url("../blocks/profile/__username/profile__usermane.css");
